fix : card/ fix form align

--- a/src/components/MyAuction/card.css
+++ b/src/components/MyAuction/card.css
@@ -23,3 +23,10 @@
     margin-bottom: 13px !important;
 
 }
+
+.kojast
+{
+    width: 550px !important;
+    align-items:center;
+    margin-right: 500px;
+}
